--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -14,8 +14,8 @@
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
-<b>Office Hours:</b> By appointment -- due to COVID-19.<br>
-<b>Syllabus:</b>  <a href="s2021_dg1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Office Hours:</b> Thursdays 17:00--17:50 at E1-1 Room 110.<br>
+<b>Syllabus:</b>  <a href="s2022_dg1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
