--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -197,7 +197,7 @@ Following the decision of the university center, the first day of class has been
 
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
-<a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
 <br><br>
 
 
