--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -257,7 +257,7 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
-<a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
 <br><br>
 
 
