--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -13,7 +13,7 @@
 
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
-<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="images/eml_gcbnu.jpg" width="291" height="79"><br>
 <b>Office Hours:</b> Thursdays 17:00--17:50 at E1-1 Room 110.<br>
 <b>Syllabus:</b>  <a href="s2022_calc1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
