--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Teaching</p></h2>
 <dl>
+<dd><a href="teaching/s2022_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
 <dd><a href="teaching/s2022_dg1.html">Differential Geometry I</a></dd>
 <dd><a href="teaching/s2022_geom1.html">Geometry for teachers I</a></dd>
 <dd><a href="teaching/s2022_calc1.html">Calculus I</a></dd>  
