--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -59,7 +59,8 @@
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
   
-  
+2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
+2022-03-03: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
 2022-03-02: Welcome!<br>
 
 
