--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -6,7 +6,7 @@
 <body>
 <h1><p align="center">Calculus I</p></h1>
 <h3><p align="center">Course 0941002 Section 02, Spring 2022</p></h3>
-<h3><p align="center">Mondays 10:00 - 10:50, Thursdays 10:00 - 11:50, Room: N14 #106<s>S1-2 #201</s></p></h3>
+<h3><p align="center">Mondays 10:00 - 10:50, Thursdays 10:00 - 11:50, Room: N14 #106 <s>No longer S1-2 #201</s></p></h3>
 <h3><p align="center">Chungbuk National University</p></h3>
 <br>
 
