--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -14,7 +14,7 @@
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_gcbnu.jpg" width="291" height="79"><br>
-<b>Office Hours:</b> Thursdays 17:00--17:50 at E1-1 Room 110.<br>
+<b>Office Hours:</b> Mondays 17:00--17:50 at E1-1 Room 110.<br>
 <b>Syllabus:</b>  <a href="s2022_dg1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 2022-03-01: Welcome!<br>
 
 
