--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -14,7 +14,7 @@
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_gcbnu.jpg" width="291" height="79"><br>
-<b>Office Hours:</b> Thursdays 17:00--17:50 at E1-1 Room 110.<br>
+<b>Office Hours:</b> Mondays 17:00--17:50 at E1-1 Room 110.<br>
 <b>Syllabus:</b>  <a href="s2022_calc1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
@@ -58,7 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-  
+2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
 2022-03-04: <FONT color="#FF00FF"><b>IMPORTANT</b></FONT> CHANGE OF CLASSROOM: Starting March 7th 10:00 class, we shall meet at N14(Humanities and Social Sciences building) Room 106. Please be sure to come to this classroom for all future class meetings.<br>
 2022-03-03: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
 2022-03-02: Welcome!<br>
