--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,21 +77,23 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 2022-03-03: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
 2022-03-02: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
+<b>Homework  #1</b> 9 problems. Due Date: March 23th (Wed).<br>
+Exercises in Section 1.3. p.4 #1<br>
+Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
+Exercises in Section 1.5. p.8 #1, 4, 5<br>
+Exercises in Section 1.6. p.11 #1<br>
+<br>
 
 
 <!--
-<b>Homework  #1</b> 9 problems. Due Date: March 14th.<br>
-An exercise on center of mass of a continuum given in the lecture.<br>
-Exercises in p.4 #1, 2, 3, 4<br>
-Exercises in p.7 #2, 3<br>
-Exercises in p.10 #3, 4<br><br>
+
 
 <b>Homework  #2</b> 11 problems. Due Date: March 21st.<br>
 Exercises in p.16 #1, 3<br>
