--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -17,7 +17,6 @@
 <b>Office Hours:</b> Mondays 17:00--17:50 at E1-1 Room 110.<br>
 <b>Syllabus:</b>  <a href="s2022_dg1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
-
 <h2><p>Announcements</p></h2>
 <!--
 2020-07-05: Letter grades have been submitted. Enjoy your summer break.<br>
@@ -58,6 +57,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to COVID-19">PDF</a><br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 2022-03-01: Welcome!<br>
 
