--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2021-03-20: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2022-03-16: <b>Announcements</b> The classes will go online during the period March 17th to March 25th. Please read email announcements.<br> 
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>  
@@ -67,10 +68,14 @@
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
+<b>Homework  #1</b> 15 problems. Due Date: March 30th.<br>
+Section 1.1: #2, 4, 5.<br>
+Section 1.2: #2, 3(1) to (6)<br>
+Section 1.4: #2, 3, 4, 6.<br>  
+Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
+  
   <!--
-<b>Homework  #1</b> 11 problems. Due Date: March 21st.<br>
-Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
+
 
 <b>Homework  #2</b> 8 problems. Due Date: March 28th.<br>
 Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
