--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-21: <b>Announcements</b> Video lectures for March 17th are now available on eCampus.<br> 
 2022-03-16: <b>Announcements</b> The classes will go online during the period March 17th to March 25th. Please read email announcements.<br> 
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
