--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-24: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2022-03-24: <b>Announcements</b> Video lectures for March 21st and today's class will be available on eCampus before the starting time of today's class.<br> 
 2022-03-21: <b>Announcements</b> Video lectures for March 17th are now available on eCampus.<br> 
 2022-03-16: <b>Announcements</b> The classes will go online during the period March 17th to March 25th. Please read email announcements.<br> 
@@ -95,6 +96,12 @@ Exercises in Section 1.5. p.8 #1, 4, 5<br>
 Exercises in Section 1.6. p.11 #1<br>
 <br>
 
+ <b>Homework  #2</b> 10 problems. Due Date: March 30th (Wed).<br>
+Exercises in Section 2.1. p.13 #1<br>
+Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
+Exercises in Section 2.3. p.18 #1<br>
+Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
+<br>
 
 <!--
 
