--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2022-03-24: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2022-03-24: <b>Announcements</b> Video lectures for March 21st and today's class will be available on eCampus before the starting time of today's class.<br> 
 2022-03-21: <b>Announcements</b> Video lectures for March 17th are now available on eCampus.<br> 
@@ -102,6 +103,13 @@ Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
 Exercises in Section 2.3. p.18 #1<br>
 Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
 <br>
+ 
+ <b>Homework  #3</b> 9 problems. Due Date: April 6th (Wed).<br>
+Exercises in Section 3.2. p.24 #2<br>
+Exercises in Section 3.3. p.25 #2<br>
+Exercises in Section 3.4. p.27 #1<br>
+Exercises in Section 3.5. p.30 #1, 2, 6, 7, 8, 9<br>
+<br> 
 
 <!--
 
