--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
 2022-03-20: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2022-03-16: <b>Announcements</b> The classes will go online during the period March 17th to March 25th. Please read email announcements.<br> 
@@ -74,6 +75,11 @@ Section 1.1: #2, 4, 5.<br>
 Section 1.3: #2, 3(1) to (6)<br>
 Section 1.4: #2, 3, 4, 6.<br>  
 Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
+
+<b>Homework  #2</b> 13 problems. Due Date: April 6th.<br>
+Section 2.1: #3, 4, 5, 7, 8.<br>
+Section 2.2: #5, 6, 9, 10[(1),(3),(5)]<br>
+Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4<br><br>
   
   <!--
 
