--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-31: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>   
 2022-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2022-03-24: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2022-03-24: <b>Announcements</b> Video lectures for March 21st and today's class will be available on eCampus before the starting time of today's class.<br> 
@@ -111,6 +112,13 @@ Exercises in Section 3.4. p.27 #1<br>
 Exercises in Section 3.5. p.30 #1, 2, 6, 7, 8, 9<br>
 <br> 
 
+ <b>Homework  #4</b> 10 problems. Due Date: April 13th (Wed).<br>
+Exercises in Section 4.2. p.37 #2, 3, 4<br>
+Exercises in Section 4.3. p.39 #1, 2, 3<br>
+Exercises in Section 4.4. p.41 #1, 3<br>
+Exercises in Section 4.5. p.43 #1, 2<br>
+<br>  
+ 
 <!--
 
 
