--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
 2022-03-20: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
@@ -80,6 +81,12 @@ Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
 Section 2.1: #3, 4, 5, 7, 8.<br>
 Section 2.2: #5, 6, 9, 10[(1),(3),(5)]<br>
 Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4<br><br>
+
+<b>Homework  #3</b> 9 problems. Due Date: April 13th.<br>
+Section 2.4: #2[(1),(3),(5),(7)], 3, 4.<br>
+Section 2.5: #1, 2(1), 4<br>
+Section 3.2: #2, 3[(1),(3),(5)], 4<br>
+ <br>  
   
   <!--
 
