--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2022-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-19: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -74,6 +75,11 @@ Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
 
 <b>Homework  #3</b> 10 problems. Due Date: April 13th.<br>
 Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
+
+<b>Homework  #4</b> 12 problems. Due Date: April 20th.<br>
+Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
+Problems from the National Exam: <a href="s2022_dg1/hw4.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>  
+  
   
   <!-- 
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
@@ -81,8 +87,7 @@ Unless otherwise stated, problem numbers below refer to Solved Problems and Supp
  
 
 
-<b>Homework  #4</b> 10 problems. Due Date: April 11th.<br>
-Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>
+
 Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
 
 <b>Homework  #5</b>  8 problems. Due Date: April 18th.<br>
