--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,7 +55,8 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
-2022-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
+2022-04-08: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
+2022-04-08: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2022-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-19: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -134,7 +135,9 @@ Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><b
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
+Midterm Exam: 
+  
+  <br>
   
   
 
