--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -137,7 +137,8 @@ Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><b
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">22 April (Friday) 11:00--12:40</FONT> in-class. <br>
 - Coverage: Chapters 3, 4, and 5(p.80 only) of the main textbook including all homework problems.<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br><br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
   
  Final Exam: TBA<br><br>
 
