--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,9 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br> 
+2022-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+2022-04-13: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2022-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
@@ -73,22 +76,37 @@
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 15 problems. Due Date: March 30th.<br>
 Section 1.1: #2, 4, 5.<br>
-Section 1.3: #2, 3(1) to (6)<br>
+Section 1.3: #2, 3(1) to (6).<br>
 Section 1.4: #2, 3, 4, 6.<br>  
 Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
 
 <b>Homework  #2</b> 13 problems. Due Date: April 6th.<br>
 Section 2.1: #3, 4, 5, 7, 8.<br>
-Section 2.2: #5, 6, 9, 10[(1),(3),(5)]<br>
-Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4<br><br>
+Section 2.2: #5, 6, 9, 10[(1),(3),(5)].<br>
+Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4.<br><br>
 
 <b>Homework  #3</b> 9 problems. Due Date: April 13th.<br>
 Section 2.4: #2[(1),(3),(5),(7)], 3, 4.<br>
-Section 2.5: #1, 2(1), 4<br>
-Section 3.2: #2, 3[(1),(3),(5)], 4<br>
+Section 2.5: #1, 2(1), 4.<br>
+Section 3.2: #2, 3[(1),(3),(5)], 4.<br>
  <br>  
-  
+
+<b>Homework  #4</b> 16 problems. Due Date: April 20th.<br>
+Section 3.3: #4, 5, 6, 7[(2),(3),(4),(5),(6),(7),(9)], 9.<br>
+Section 3.4: #3, 4, 5, 6, 7.<br>
+Section 3.5: #2, 3, 4, 5.<br>
+Section 3.6: #1(6), 2[(1),(2)].<br><br>  
+
+ <b>Homework  #5</b> 15 problems. Due Date: Before midterm exam.<br>
+Section 3.7: #1, 2, 3, 4, 5.<br>
+Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
+Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)].<br>
+Section 4.3: #2[(1), (3), (5)].<br>
+Section 4.4: #1[(1), (2)], #2(2).<br>
+Section 4.5: #1[(1), (3), (5)].<br>
+ 
   <!--
+ 
 
 
 <b>Homework  #2</b> 8 problems. Due Date: March 28th.<br>
@@ -132,7 +150,12 @@ Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><b
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
+Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
+- Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
+- Total 8 questions. This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
+  
+ Final Exam: TBA<br><br>
 
 
 <h2><p>Links</p></h2>
