--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
 2022-03-31: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>   
 2022-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2022-03-24: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
@@ -212,8 +213,13 @@ confirmed below
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
-
+Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-class. <br>
+- Coverage: Chapters 1 to 6 and 7 (only those sections completed by April 21st class).<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
+  
+  
+ Final Exam: TBA<br><br>
 
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
