--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-04-14: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
 2022-03-31: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>   
 2022-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
@@ -119,28 +120,17 @@ Exercises in Section 4.3. p.39 #1, 2, 3<br>
 Exercises in Section 4.4. p.41 #1, 3<br>
 Exercises in Section 4.5. p.43 #1, 2<br>
 <br>  
+
+ <b>Homework  #5</b> 12 problems. Due Date: April 20th (Wed).<br>
+Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
+Exercises in Section 5.3. p.51 #1<br>
+Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
+Exercises in Section 6.3. p.61 #1<br> 
+Exercises in Section 6.4. p.63 #1<br> 
  
 <!--
 
 
-<b>Homework  #2</b> 11 problems. Due Date: March 21st.<br>
-Exercises in p.16 #1, 3<br>
-Exercises in p.20 #1, 2, 3<br>
-Exercises in p.22 #1, 2, 3<br>
-Exercises in p.24 #1, 2, 3<br><br>
- 
-<b>Homework  #3</b> 8 problems. Due Date: March 28th.<br>
-Exercises in p.27 #3, 4<br>
-Exercises in p.31 #2, 3<br>
-Exercises in p.33 #2, 3<br>
-Exercises in p.34 #1, 2<br><br>
- 
-<b>Homework  #4</b> 10 problems. Due Date: April 4th.<br>
-Exercises in p.39 #2, 3<br>
-Exercises in p.42 #1, 2<br>
-Exercises in p.45 #2, 3<br>
-Exercises in p.47 #1, 2<br>
-Exercises in p.48 #1, 2<br><br>
 
 <b>Homework  #5</b> 10 problems. Due Date: April 11th.<br>
 Exercises in p.50 #2, 3<br>
