--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -126,7 +126,7 @@ Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
 Exercises in Section 5.3. p.51 #1<br>
 Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
-Exercises in Section 6.4. p.63 #1<br> 
+Exercises in Section 6.4. p.63 #1<br><br>  
  
 <!--
 
