--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage has been confirmed. See details below.<br> 
 2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 2022-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
 2022-04-13: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
@@ -152,6 +153,7 @@ Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><b
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
+- Update (2022-04-21): All sections of Chapter 4 will be covered. Please bring your photo ID (Student ID or Government ID) with you.<br>
 - Total 8 questions. This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
   
