--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,8 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-04-21: <FONT COLOR="red">Homework #5</FONT> has been updated. Problems from Section 7.1 are added and it is now due before the midterm exam.<br>
+2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Coverage of the exam has been confirmed. See details from below.<br>   
 2022-04-14: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
 2022-03-31: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>   
@@ -121,12 +123,13 @@ Exercises in Section 4.4. p.41 #1, 3<br>
 Exercises in Section 4.5. p.43 #1, 2<br>
 <br>  
 
- <b>Homework  #5</b> 12 problems. Due Date: April 20th (Wed).<br>
+ <b>Homework  #5</b> 14 problems. Due Date: Before midterm exam.<br>
 Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
 Exercises in Section 5.3. p.51 #1<br>
 Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
-Exercises in Section 6.4. p.63 #1<br><br>  
+Exercises in Section 6.4. p.63 #1<br>
+Exercises in Section 7.1. p.68 #1, 2<br><br>  
  
 <!--
 
@@ -205,6 +208,7 @@ confirmed below
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-class. <br>
 - Coverage: Chapters 1 to 6 and 7 (only those sections completed by April 21st class).<br>
+- Update 2022-04-21: The exam will cover Chapters 1 to 6 and part of Chapter 7 (Only Section 7.1).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
   
