--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -208,7 +208,7 @@ confirmed below
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-class. <br>
 - Coverage: Chapters 1 to 6 and 7 (only those sections completed by April 21st class).<br>
-- Update 2022-04-21: The exam will cover Chapters 1 to 6 and part of Chapter 7 (Only Section 7.1).<br>
+- Update (2022-04-21): The exam will cover Chapters 1 to 6 and part of Chapter 7 (Only Section 7.1).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
   
