--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,7 +77,8 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-2022-04-21: <FONT COLOR="red">Homework #5</FONT> has been updated. Problems from Section 7.1 are added and it is now due before the midterm exam.<br>
+2022-04-22: We will keep <FONT COLOR="red">Homework #5</FONT> as originally assigned. No need to resubmit. Problems in Section 7.1, which will be assigned in <FONT COLOR="red">Homework #6</FONT> are still relevant for the upcoming midterm exam.<br> 
+ <strike>2022-04-21: <FONT COLOR="red">Homework #5</FONT> has been updated. Problems from Section 7.1 are added and it is now due before the midterm exam.<br></strike>
 2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Coverage of the exam has been confirmed. See details from below.<br>   
 2022-04-14: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
@@ -123,13 +124,16 @@ Exercises in Section 4.4. p.41 #1, 3<br>
 Exercises in Section 4.5. p.43 #1, 2<br>
 <br>  
 
- <b>Homework  #5</b> 14 problems. Due Date: Before midterm exam.<br>
+ <b>Homework  #5</b> 14 problems. Due Date: April 20th (Wed)<br>
 Exercises in Section 5.2. p.48 #1, 2, 4, 5, 6<br>
 Exercises in Section 5.3. p.51 #1<br>
 Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
-Exercises in Section 6.4. p.63 #1<br>
-Exercises in Section 7.1. p.68 #1, 2<br><br>  
+Exercises in Section 6.4. p.63 #1<br><br>
+ 
+ <b>Homework  #6</b> ?? problems. Due Date: TBA<br>
+ Exercises in Section 7.1. p.68 #1, 2<br>
+ More problems to be added.<br><br>
  
 <!--
 
