--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,7 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-2022-04-22: We will keep <FONT COLOR="red">Homework #5</FONT> as originally assigned. No need to resubmit. Problems in Section 7.1, which will be assigned in <FONT COLOR="red">Homework #6</FONT> are still relevant for the upcoming midterm exam.<br> 
+2022-04-22: We will keep <FONT COLOR="red">Homework #5</FONT> as originally assigned. No need to resubmit. Problems in Section 7.1, which will be assigned in <FONT COLOR="red">Homework #6</FONT>, are still relevant for the upcoming midterm exam.<br> 
  <strike>2022-04-21: <FONT COLOR="red">Homework #5</FONT> has been updated. Problems from Section 7.1 are added and it is now due before the midterm exam.<br></strike>
 2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Coverage of the exam has been confirmed. See details from below.<br>   
 2022-04-14: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
