--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-04-26: Supplement materials have been posted on CBNU eCampus.<br>  
 2022-04-08: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
 2022-04-08: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2022-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
