--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-04-29: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2022-04-26: Supplement materials have been posted on CBNU eCampus.<br>  
 2022-04-08: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
 2022-04-08: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
@@ -81,6 +82,16 @@ Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br
 <b>Homework  #4</b> 12 problems. Due Date: April 20th.<br>
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
 Problems from the National Exam: <a href="s2022_dg1/hw4.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>  
+
+<b>Homework  #5</b>  20 problems. Due Date: May 18th.<br>
+Problems from Chapter 5: #5, 7, 8<br>
+Problems from O'Neill, Elementary Differential Geometry, p.15 Exercise #3, 4, 5<br>
+Problems from O'Neill, Elementary Differential Geometry, p.22 Exercise #6<br>
+Problems from O'Neill, Elementary Differential Geometry, p.40 Exercise #4, 5, 6, 7, 8, 9, 10<br>  
+Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
+Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
+Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
+  
   
   
   <!-- 
@@ -90,7 +101,7 @@ Unless otherwise stated, problem numbers below refer to Solved Problems and Supp
 
 
 
-Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
+
 
 <b>Homework  #5</b>  8 problems. Due Date: April 18th.<br>
 Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
