--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -155,8 +155,8 @@ Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-c
 - Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
 - Update (2022-04-21): All sections of Chapter 4 will be covered. Please bring your photo ID (Student ID or Government ID) with you.<br>
 - Total 8 questions. This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
-  The average was 36.48. The maximum score achieved by a student was 93.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+  The average was 36.48. The maximum score achieved by a student was 93.<br><br>
   
  Final Exam: TBA<br><br>
 
