--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>  
 2022-04-29: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2022-04-26: Supplement materials have been posted on CBNU eCampus.<br>  
 2022-04-08: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>  
@@ -156,6 +157,15 @@ The average was 61.78. The maximum score achieved by a student was 92.<br><br>
  Final Exam: TBA<br><br>
 
   
+
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/H59avYkQxoxWJ8fM9" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
+
   
 
 <h2><p>Links</p></h2>
