--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,8 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+ 
+2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>   
 2022-04-22: We will keep <FONT COLOR="red">Homework #5</FONT> as originally assigned. No need to resubmit. Problems in Section 7.1, which will be assigned in <FONT COLOR="red">Homework #6</FONT>, are still relevant for the upcoming midterm exam.<br> 
  <strike>2022-04-21: <FONT COLOR="red">Homework #5</FONT> has been updated. Problems from Section 7.1 are added and it is now due before the midterm exam.<br></strike>
 2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> Coverage of the exam has been confirmed. See details from below.<br>   
@@ -219,6 +221,17 @@ Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-c
   
  Final Exam: TBA<br><br>
 
+ 
+
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/H59avYkQxoxWJ8fM9" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
+
+ 
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
 <a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
