--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -79,7 +79,7 @@
 -->
 
  
-2022-05-06: If you want to learn more geometries and are certain about taking Geometry for teachers II in Fall 2022, please fill out <a href="https://forms.gle/9RPo9KdjU66N9m186" title="Consent form">this form</a> to submit your consent.<br>
+2022-05-06: If you want to learn more geometries and are certain about taking Geometry for teachers II in Fall 2022, please fill out <a href="https://forms.gle/9RPo9KdjU66N9m186" title="Consent form">this form</a> to submit your consent by May 15th.<br>
 2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>   
 2022-04-22: We will keep <FONT COLOR="red">Homework #5</FONT> as originally assigned. No need to resubmit. Problems in Section 7.1, which will be assigned in <FONT COLOR="red">Homework #6</FONT>, are still relevant for the upcoming midterm exam.<br> 
  <strike>2022-04-21: <FONT COLOR="red">Homework #5</FONT> has been updated. Problems from Section 7.1 are added and it is now due before the midterm exam.<br></strike>
