--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-05-09: <b>Handout 2</b> will be distributed today. If you happened to miss today's class and do not receive it, write an email to get a copy.<br>  
 2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>  
 2022-04-29: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2022-04-26: Supplement materials have been posted on CBNU eCampus.<br>  
