--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage has been confirmed. See details below.<br> 
 2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 2022-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
@@ -104,49 +105,16 @@ Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
 Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)].<br>
 Section 4.3: #2[(1), (3), (5)].<br>
 Section 4.4: #1[(1), (2)], #2(2).<br>
-Section 4.5: #1[(1), (3), (5)].<br>
+Section 4.5: #1[(1), (3), (5)].<br><br>
  
-  <!--
+ <b>Homework  #6</b> 17 problems. Due Date: May 25th.<br>
+Section 5.1: #2, 3.<br>
+Section 5.2: #1[(1),(3),(5)], 3, 4, 5.<br>
+Section 5.3: #1[(1),(3),(5),(7)], 2[(1),(2)], 4, 6, 7.<br>
+Section 5.4: #1[(1),(3),(5),(7)], 2[(1),(3)], 3.<br>
+Section 5.5: #1[(1),(2)], 2, 3.<br><br>  
  
-
-
-<b>Homework  #2</b> 8 problems. Due Date: March 28th.<br>
-Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
-  
-<b>Homework  #3</b> 10 problems. Due Date: April 4th.<br>
-Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
-
-<b>Homework  #4</b> 10 problems. Due Date: April 11th.<br>
-Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>
-Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
-
-<b>Homework  #5</b>  8 problems. Due Date: April 18th.<br>
-Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
-Problems from the National Exam: <a href="s2021_dg1/hw5.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #6</b>  7 problems. Due Date: April 25st.<br>
-Problems from Chapter 5 (Part 3): #22, 23, 24, 33<br>
-Problems from the National Exam: <a href="s2021_dg1/hw6.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #7</b>  11 problems. Due Date: May 9th.<br>
-Problems from Chapter 7 (Part 1): #2, 3, 4, 8, 15<br>
-Problems from the National Exam: <a href="s2021_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-  
-<b>Homework  #8</b>  11 problems. Due Date: May 16th.<br>
-Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
-Problems from the National Exam: <a href="s2021_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #9</b>  12 problems. Due Date: May 23th.<br>
-Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
-Problems from M. P. do Carmo, Differential forms and applications, p.10 Exercise #1, 2, 5, 7, 10<br>
-Problems from the National Exam: <a href="s2021_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #10</b>  12 problems. Due Date: June 6th.<br>
-Problems from Marsden and Tromba, Vector Calculus, p.182 Exercise #1, 5, 18, 22, 29, 31<br>
-Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
-Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
-Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
--->
+ 
 
 
 
