--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -78,7 +78,7 @@
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
 
- 
+2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2022-05-06: If you want to learn more geometries and are certain about taking Geometry for teachers II in Fall 2022, please fill out <a href="https://forms.gle/9RPo9KdjU66N9m186" title="Consent form">this form</a> to submit your consent by May 15th.<br>
 2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>   
 2022-04-22: We will keep <FONT COLOR="red">Homework #5</FONT> as originally assigned. No need to resubmit. Problems in Section 7.1, which will be assigned in <FONT COLOR="red">Homework #6</FONT>, are still relevant for the upcoming midterm exam.<br> 
@@ -135,11 +135,14 @@ Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
 Exercises in Section 6.4. p.63 #1<br><br>
  
- <b>Homework  #6</b> ?? problems. Due Date: TBA<br>
+<b>Homework  #6</b> 8 problems. Due Date: May 25th (Wed)<br>
  Exercises in Section 7.1. p.68 #1, 2<br>
- More problems to be added.<br><br>
+ Exercises in Section 7.2. p.71 #1, 2<br>
+ Exercises in Section 7.3. p.73 #2, 3, 5<br>
+ Exercises in Section 7.4. p.75 #1<br><br>
  
-<!--
+ 
+ <!--
 
 
 
