--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2022-05-09: <b>Handout 2</b> will be distributed today. If you happened to miss today's class and do not receive it, write an email to get a copy.<br>  
 2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>  
 2022-04-29: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
@@ -94,7 +95,8 @@ Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
   
-  
+<b>Homework  #6</b> 7 problems. Due Date: May 25th.<br>
+Problems from Handout 2.<br><br>    
   
   <!-- 
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
