--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-05-18: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>    
 2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage has been confirmed. See details below.<br> 
 2022-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br> 
@@ -113,6 +114,11 @@ Section 5.2: #1[(1),(3),(5)], 3, 4, 5.<br>
 Section 5.3: #1[(1),(3),(5),(7)], 2[(1),(2)], 4, 6, 7.<br>
 Section 5.4: #1[(1),(3),(5),(7)], 2[(1),(3)], 3.<br>
 Section 5.5: #1[(1),(2)], 2, 3.<br><br>  
+ 
+ <b>Homework  #7</b> 11 problems. Due Date: June 1st.<br>
+Section 6.1: #2, 3, 4.<br>
+Section 6.2: #3, 4, 5, 6, 7, 8.<br>
+Section 6.3: #1[(1),(3)], 2[(1),(3)].<br><br>  
  
  
 
