--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,9 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-05-19: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
+2022-05-29: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2022-05-23: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>  
 2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2022-05-09: <b>Handout 2</b> will be distributed today. If you happened to miss today's class and do not receive it, write an email to get a copy.<br>  
 2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>  
@@ -97,47 +100,14 @@ Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><b
   
 <b>Homework  #6</b> 7 problems. Due Date: May 25th.<br>
 Problems from Handout 2.<br><br>    
+
+<b>Homework  #7</b> 9 problems. Due Date: June 8th.<br>
+Problems from Handout 3.<br><br>      
   
-  <!-- 
-Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
+<b>Homework  #8</b> 16 problems. Due Date: Before the final exam.<br>  
+Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br>
+Problems from Chapter 8 Part 2: #17, 19(a), 30, 33, 34, 38.<br><br>
 
- 
-
-
-
-
-
-<b>Homework  #5</b>  8 problems. Due Date: April 18th.<br>
-Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
-Problems from the National Exam: <a href="s2021_dg1/hw5.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #6</b>  7 problems. Due Date: April 25st.<br>
-Problems from Chapter 5 (Part 3): #22, 23, 24, 33<br>
-Problems from the National Exam: <a href="s2021_dg1/hw6.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #7</b>  11 problems. Due Date: May 9th.<br>
-Problems from Chapter 7 (Part 1): #2, 3, 4, 8, 15<br>
-Problems from the National Exam: <a href="s2021_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-  
-<b>Homework  #8</b>  11 problems. Due Date: May 16th.<br>
-Problems from Chapter 7 (Part 2): #12, 14, 19, 21, 23, 28, 29<br>
-Problems from the National Exam: <a href="s2021_dg1/hw8.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #9</b>  12 problems. Due Date: May 23th.<br>
-Problems from Serge Lang, Linear Algebra, 3rd Ed. p.131 Exercise #6<br>
-Problems from M. P. do Carmo, Differential forms and applications, p.10 Exercise #1, 2, 5, 7, 10<br>
-Problems from the National Exam: <a href="s2021_dg1/hw9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #10</b>  12 problems. Due Date: June 6th.<br>
-Problems from Marsden and Tromba, Vector Calculus, p.182 Exercise #1, 5, 18, 22, 29, 31<br>
-Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
-Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
-Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
-
-  
-
-
--->
 
 <!-- HW9 about this week's exercises <br> -->
 
@@ -157,7 +127,10 @@ Midterm Exam: <FONT COLOR="#C40062">22 April (Friday) 11:00--12:40</FONT> in-cla
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
 The average was 61.78. The maximum score achieved by a student was 92.<br><br>
   
- Final Exam: TBA<br><br>
+ Final Exam: <FONT COLOR="#C40062">17 June (Friday) 11:00--12:40</FONT> in-class. <br>
+- Coverage: Everything covered in this course including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
 
   
 
