--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -57,6 +57,7 @@
 -->
 2022-05-19: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2022-05-29: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2022-05-23: We will not meet on Mondays June the 13th and the 20th. Instead, we will have our final exam on June 17th (Friday).<br> 
 2022-05-23: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>  
 2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2022-05-09: <b>Handout 2</b> will be distributed today. If you happened to miss today's class and do not receive it, write an email to get a copy.<br>  
