--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,10 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-05-29: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>   
+2022-05-29: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>    
+2022-05-26: We will not meet on Monday June the 20th. Instead, we will have a make-up lesson on June 13th at 11:00--11:50.<br> 
+2022-05-26: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2022-05-18: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>    
 2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2022-04-21: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage has been confirmed. See details below.<br> 
@@ -120,7 +124,19 @@ Section 6.1: #2, 3, 4.<br>
 Section 6.2: #3, 4, 5, 6, 7, 8.<br>
 Section 6.3: #1[(1),(3)], 2[(1),(3)].<br><br>  
  
+<b>Homework  #8</b> 16 problems. Due Date: June 8th.<br>
+Section 7.2: #1, 2, 4, 5, 7.<br>
+Section 7.3: #1, 3, 7, 8[(3),(4),(5)].<br>
+Section 7.4: #4, 9.<br>
+Section 7.5: #3, 7.<br>
+Section 7.6: #2, 3, 4.<br><br>  
  
+<b>Homework  #9</b> 14 problems. Due Date: Before final exam.<br>
+Section 8.1: #3, 4, 6.<br>
+Section 8.2: #1[(1),(3),(5)], 2[(1),(3),(5)], 3[(1),(3),(5)].<br>
+Section 8.3: #1[(1),(3),(5)], 2[(1),(3),(5)], 3[(1),(3),(5),(7)].<br>
+Section 8.4: #1[(1),(3),(5),(7)], 4[(1),(3),(5),(7)].<br>
+Section 8.5: #1[(1),(3),(5),(7)], 2[(1),(4)], 4.<br><br>   
 
 
 
@@ -132,7 +148,12 @@ Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-c
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
   The average was 36.48. The maximum score achieved by a student was 93.<br><br>
   
- Final Exam: TBA<br><br>
+ Final Exam: <FONT COLOR="#C40062">16 June (Thursday) 10:00--11:40</FONT> in-class. <br>
+- Coverage: Everything we covered in this course including all homework problems.<br>
+- Please bring your photo ID (Student ID or Government ID) with you.<br>
+- Total 8 questions. This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
+  
 
 
 <h2><p>Links</p></h2>
