--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,7 +77,8 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-
+2022-05-26: We will not meet on Mondays June the 13th and the 20th. Instead, we will have our final exam on June 17th (Friday).<br> 
+2022-05-26: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2022-05-06: If you want to learn more geometries and are certain about taking Geometry for teachers II in Fall 2022, please fill out <a href="https://forms.gle/9RPo9KdjU66N9m186" title="Consent form">this form</a> to submit your consent by May 15th.<br>
 2022-05-06: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>   
@@ -146,71 +147,6 @@ Exercises in Section 6.4. p.63 #1<br><br>
 
 
 
-<b>Homework  #5</b> 10 problems. Due Date: April 11th.<br>
-Exercises in p.50 #2, 3<br>
-Exercises in p.52 #1, 2<br>
-Exercises in p.53 #1, 2<br>
-Exercises in p.57 #1, 3<br>
-Exercises in p.59 #2, 3<br><br>
- 
-<b>Homework  #6</b> 16 problems. Due Date: April 18th.<br>
-Exercises in p.62 #1, 2<br>
-Exercises in p.63 #1, 2<br>
-Exercises in p.64 #1, 2, 3<br>
-Exercises in p.66 #2, 3<br>
-Exercises in p.68 #1, 2<br>
-Exercises in p.69 #1, 2<br>
-Exercises in p.72--73 Questions 1, 2, 3.<br><br>
- 
-<b>Homework  #7</b> 9 problems. Due Date: April 25th.<br>
-Exercises in p.81 #3<br>
-Exercises in p.82 #2, 3<br>
-Exercises in p.83 #1, 3<br>
-Exercises in p.85 #1, 2<br>
-Exercises in p.88 #1, 3<br><br>
-
-<b>Homework  #8</b> 14 problems. Due Date: May 2nd.<br>
-Exercises in p.92 #1, 2, 3<br>
-Exercises in p.93 #1, 2, 3<br>
-Exercises in p.97 #2, 3, 4<br>
-Exercises in p.97 (bottom) #1, 2, 3<br>
-Exercises in p.100 #2, 3<br><br>
-
-<b>Homework  #9</b> 7 problems. Due Date: May 9th.<br>
-Exercises in p.102 #1<br>
-Exercises in p.103 #1, 2<br>
-Exercises in p.108 #1, 2, 3, 4<br><br>
-
-<b>Homework  #10</b> 8 problems. Due Date: May 16th.<br>
-Exercises in p.113 #1, 2, 3, 4<br>
-Exercises in p.116 #1, 2, 3, 4<br><br>
-
-<b>Homework  #11</b> 10 problems. Due Date: May 23rd.<br>
-Exercises in p.123 #1, 2, 3<br>
-Exercises in p.128 #1, 2, 3<br>
-Exercises in p.129 #1, 2, 3, 4<br><br>
-
-<b>Homework  #12</b> 10 problems. Due Date: May 30th.<br>
-Exercises in p.133 #1, 2<br>
-Exercises in p.135 #1, 2<br>
-Exercises in p.137 #1, 2, 3<br>
-Exercises in p.138 #1, 2, 3<br><br>
-
-<b>Homework  #13</b> 12 problems. Due Date: June 6th.<br>
-Exercises in p.141 #1, 3<br>
-Exercises in p.142 #1, 2<br>
-Exercises in p.143 #2, 3<br>
-Exercises in p.144 #2, 3<br>
-Exercises in p.146 #1, 3<br>
-Exercises in p.148 #1, 3<br><br>
-
-<b>Homework  #14</b> 5 problems. No need to hand-in (not counted toward Homework score).<br>
-Exercises in p.184 #1, 2, 3<br>
-Exercises in p.187 #1, 3<br><br>
-
-confirmed below
-
-
 
 -->
 
@@ -224,7 +160,12 @@ Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-c
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
   
   
- Final Exam: TBA<br><br>
+Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
+- Coverage: Everything we covered in this course including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
+  
+
 
  
 
