--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -126,7 +126,7 @@ Section 6.3: #1[(1),(3)], 2[(1),(3)].<br><br>
  
 <b>Homework  #8</b> 16 problems. Due Date: June 8th.<br>
 Section 7.2: #1, 2, 4, 5, 7.<br>
-Section 7.3: #1, 3, 7, 8[(3),(4),(5)].<br>
+Section 7.3: #1, 3, 7[(3),(4),(5)], 8.<br>
 Section 7.4: #4, 9.<br>
 Section 7.5: #3, 7.<br>
 Section 7.6: #2, 3, 4.<br><br>  
