--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -77,6 +77,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-05-31: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
 2022-05-26: We will not meet on Mondays June the 13th and the 20th. Instead, we will have our final exam on June 17th (Friday).<br> 
 2022-05-26: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
 2022-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
@@ -142,6 +143,14 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 7.3. p.73 #2, 3, 5<br>
  Exercises in Section 7.4. p.75 #1<br><br>
  
+<b>Homework  #7</b> 16 problems. Due Date: June 8th (Wed)<br>
+ Exercises in Section 8.1. p.78 #1, 2, 3<br>
+ Exercises in Section 8.3. p.81 #1[(i),(iii)]<br>
+ Exercises in Section 8.4. p.83 #1<br>
+ Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br><br>
+ Exercises in Section 9.1. p.89 #1, 2<br>
+ Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
+ Exercises in Section 9.3. p.96 #1, 2, 4<br><br>
  
  <!--
 
