--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -147,7 +147,7 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 8.1. p.78 #1, 2, 3<br>
  Exercises in Section 8.3. p.81 #1[(i),(iii)]<br>
  Exercises in Section 8.4. p.83 #1<br>
- Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br><br>
+ Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
  Exercises in Section 9.1. p.89 #1, 2<br>
  Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
  Exercises in Section 9.3. p.96 #1, 2, 4<br><br>
